Bug fix for website on small devices. Fixed dragon page

--- a/src/Components/Vehicles/vehicles.css
+++ b/src/Components/Vehicles/vehicles.css
@@ -1,17 +1,19 @@
 .falcon9Img {
     background: url("/src/Images/Vehicles/Falcon9.png") no-repeat;
-    height: 60vh;
+    /* height: 60vh; */
     width: 100px;
     background-position-y: center;
     background-position-x: center;
+    background-size: contain;
 }
 
 .falconHeavyImg {
     background: url("/src/Images/Vehicles/FalconHeavy.png") no-repeat;
-    height: 60vh;
+    /* height: 60vh; */
     width: 100px;
     background-position-y: center;
     background-position-x: center;
+    background-size: contain;
 }
 .dragonImg {
     background: url("/src/Images/Vehicles/Dragon2.png") no-repeat;
@@ -19,13 +21,15 @@
     width: 70px;;
     background-position-y: center;
     background-position-x: center;
+    background-size: contain;
 }
 .starshipImg {
     background: url("/src/Images/Vehicles/Starship.png") no-repeat;
-    height: 60vh;
+    /* height: 60vh; */
     width: 100px;
     background-position-y: center;
     background-position-x: center;
+    background-size: contain;
 }
 .VehicleDataTable {
     align-self: center;
